Fix for #328 Review Footer Menus Styling and Spacings

--- a/base/scss/objects/_gallery.scss
+++ b/base/scss/objects/_gallery.scss
@@ -188,6 +188,10 @@
 	.c-gallery__item {
 		width: auto;
 		padding-right: 0;
+
+    @include below(lap) {
+      width: 100%;
+    }
 	}
 }
 
